// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`App renders the correct starting elements 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="container"
    >
      <div
        class="navigation-panel"
      >
        <h1>
          BPF Verifier Visualizer
        </h1>
        <div
          class="line-nav-item"
        >
          <button
            class="nav-button"
            id="clear"
          >
            Clear
          </button>
        </div>
        <div
          class="line-nav-item"
        >
          <div
            class="file-input-container"
          >
            <input
              id="file-input"
              type="file"
            />
          </div>
        </div>
        <div
          class="howto-container"
        >
          <a
            class="nav-button howto-link"
            href="https://github.com/theihor/bpfvv/blob/master/HOWTO.md"
            rel="noreferrer"
            target="_blank"
          >
            How To Use
          </a>
        </div>
      </div>
      <textarea
        id="input-text"
        placeholder="Paste a verifier log here, choose a file, or load an example log"
      />
      <div
        id="hint"
      >
        <div
          class="hint-line"
          id="hint-hovered-line"
        >
          <br />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App renders the log visualizer when text is pasted 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="container"
    >
      <div
        class="navigation-panel"
      >
        <h1>
          BPF Verifier Visualizer
        </h1>
        <div
          class="line-nav-item"
        >
          <button
            class="nav-button"
            id="clear"
          >
            Clear
          </button>
        </div>
        <div
          class="line-nav-item"
        >
          <label>
            Previous Logs:
          </label>
          <select
            id="log-example-dropdown"
          >
            <option
              value="pasted log (wed jan 15 2025 - 12:00:00 pm)"
            >
              pasted log (wed jan 15 2025 - 12:00:00 pm)
            </option>
          </select>
          <button
            class="nav-button"
            id="load-example"
          >
            Load
          </button>
        </div>
        <div
          class="line-nav-item"
        >
          <div
            class="file-input-container"
          >
            <input
              id="file-input"
              type="file"
            />
          </div>
        </div>
        <div
          class="howto-container"
        >
          <a
            class="nav-button howto-link"
            href="https://github.com/theihor/bpfvv/blob/master/HOWTO.md"
            rel="noreferrer"
            target="_blank"
          >
            How To Use
          </a>
        </div>
      </div>
      <div
        class="main-content"
        id="main-content"
      >
        <div
          class="c-source-panel"
          id="c-source-container"
        >
          <div
            class="nav-arrow hide-show-button left"
            id="csource-toggle"
          >
            ⇐
            <div
              class="nav-arrow-tooltip hide-show-tooltip"
            >
              Hide
               
              C Source Panel
            </div>
          </div>
          <div
            id="c-source-content"
          >
            <div
              role="list"
              style="position: relative; max-height: 100%; flex-grow: 1; overflow-y: auto;"
            >
              <div
                aria-hidden="true"
                style="height: 0px; width: 100%; z-index: -1;"
              />
            </div>
          </div>
        </div>
        <div
          class=""
          id="log-container"
        >
          <div
            class="nav-arrow log-nav-button"
            id="goto-start"
          >
            <div
              class="log-button-txt"
            >
              ⇒
            </div>
            <div
              class="nav-arrow-tooltip up-down-tooltip"
            >
              Go To Start
            </div>
          </div>
          <div
            class="nav-arrow log-nav-button"
            id="goto-end"
          >
            <div
              class="log-button-txt"
            >
              ⇒
            </div>
            <div
              class="nav-arrow-tooltip up-down-tooltip"
            >
              Go To End
            </div>
          </div>
          <div
            id="log-content"
          >
            <div
              role="list"
              style="position: relative; max-height: 100%; flex-grow: 1; overflow-y: auto;"
            >
              <div
                class="flex items-center justify-between log-line selected-line normal-line"
                data-react-window-index="0"
                id="line-0"
                line-index="0"
                style="position: absolute; left: 0px; transform: translateY(0px); height: 20px; width: 100%;"
              >
                <div
                  class="pc-number"
                >
                  314
                </div>
                <div
                  class="dep-arrow"
                  id="dep-arrow-line-0"
                  line-id="0"
                />
                <div
                  class="log-line-content"
                >
                  <span
                    class="line-indent"
                  />
                  *(u8 *)(
                  <span
                    class="mem-slot"
                    data-id="r7"
                    id="mem-slot-r7-line-0"
                  >
                    r7
                  </span>
                   +1303)
                   
                  =
                   
                  <span
                    class="mem-slot"
                    data-id="r1"
                    id="mem-slot-r1-line-0"
                  >
                    r1
                  </span>
                </div>
              </div>
              <div
                aria-hidden="true"
                style="height: 20px; width: 100%; z-index: -1;"
              />
            </div>
          </div>
        </div>
        <div
          class="state-panel"
          id="state-panel"
        >
          <div
            class="nav-arrow hide-show-button right"
            id="state-toggle"
          >
            ⇒
            <div
              class="nav-arrow-tooltip hide-show-tooltip"
            >
              Hide
               
              State Panel
            </div>
          </div>
          <div
            id="state-panel-content"
          >
            <div
              id="state-panel-header"
            >
              <div
                class="panel-header-active"
              >
                <span
                  class="bold"
                >
                  Log Line:
                </span>
                 
                1
              </div>
              <div
                class="panel-header-active"
              >
                <span
                  class="bold"
                >
                  C Line:
                </span>
                 
                0
              </div>
              <div>
                <span
                  class="bold"
                >
                  PC:
                </span>
                 
                314
              </div>
              <div>
                <span
                  class="bold"
                >
                  Frame:
                </span>
                 
                1
              </div>
            </div>
            <div
              id="state-panel-table"
            >
              <table>
                <tbody>
                  <tr
                    class="state-row row-empty"
                    data-id="0"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r0
                    </td>
                    <td>
                      <span />
                    </td>
                  </tr>
                  <tr
                    class="state-row effect-write"
                    data-id="r1"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r1
                    </td>
                    <td>
                      <span>
                        ctx()
                         
                        -&gt;
                         
                        0
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="state-row row-empty"
                    data-id="0"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r2
                    </td>
                    <td>
                      <span />
                    </td>
                  </tr>
                  <tr
                    class="state-row row-empty"
                    data-id="0"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r3
                    </td>
                    <td>
                      <span />
                    </td>
                  </tr>
                  <tr
                    class="state-row row-empty"
                    data-id="0"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r4
                    </td>
                    <td>
                      <span />
                    </td>
                  </tr>
                  <tr
                    class="state-row row-empty"
                    data-id="0"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r5
                    </td>
                    <td>
                      <span />
                    </td>
                  </tr>
                  <tr
                    class="state-row row-empty"
                    data-id="0"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r6
                    </td>
                    <td>
                      <span />
                    </td>
                  </tr>
                  <tr
                    class="state-row effect-write"
                    data-id="r7"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r7
                    </td>
                    <td>
                      <span>
                         
                        -&gt;
                         
                        map_value(off=0,ks=4,vs=2808,imm=0)
                      </span>
                    </td>
                  </tr>
                  <tr
                    class="state-row row-empty"
                    data-id="0"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r8
                    </td>
                    <td>
                      <span />
                    </td>
                  </tr>
                  <tr
                    class="state-row row-empty"
                    data-id="0"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r9
                    </td>
                    <td>
                      <span />
                    </td>
                  </tr>
                  <tr
                    class="state-row"
                    data-id="r10"
                  >
                    <td
                      class="mem-slot-label"
                    >
                      r10
                    </td>
                    <td>
                      <span>
                        fp-0
                      </span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
      <div
        id="hint"
      >
        <div
          class="hint-line"
          id="hint-selected-line"
        >
          <span>
            [selected raw line] 
            1
            :
          </span>
           
          314: (73) *(u8 *)(r7 +1303) = r1      ; frame1: R1_w=0 R7=map_value(off=0,ks=4,vs=2808,imm=0)
        </div>
        <div
          class="hint-line"
          id="hint-hovered-line"
        >
          <span>
            [hovered raw line] 
            1
            :
          </span>
           
          314: (73) *(u8 *)(r7 +1303) = r1      ; frame1: R1_w=0 R7=map_value(off=0,ks=4,vs=2808,imm=0)
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App renders the log visualizer when text is pasted 2`] = `
<div>
  <div
    class="App"
  >
    <div
      class="container"
    >
      <div
        class="navigation-panel"
      >
        <h1>
          BPF Verifier Visualizer
        </h1>
        <div
          class="line-nav-item"
        >
          <button
            class="nav-button"
            id="clear"
          >
            Clear
          </button>
        </div>
        <div
          class="line-nav-item"
        >
          <label>
            Previous Logs:
          </label>
          <select
            id="log-example-dropdown"
          >
            <option
              value="pasted log (wed jan 15 2025 - 12:00:00 pm)"
            >
              pasted log (wed jan 15 2025 - 12:00:00 pm)
            </option>
          </select>
          <button
            class="nav-button"
            id="load-example"
          >
            Load
          </button>
        </div>
        <div
          class="line-nav-item"
        >
          <div
            class="file-input-container"
          >
            <input
              id="file-input"
              type="file"
            />
          </div>
        </div>
        <div
          class="howto-container"
        >
          <a
            class="nav-button howto-link"
            href="https://github.com/theihor/bpfvv/blob/master/HOWTO.md"
            rel="noreferrer"
            target="_blank"
          >
            How To Use
          </a>
        </div>
      </div>
      <textarea
        id="input-text"
        placeholder="Paste a verifier log here, choose a file, or load an example log"
      />
      <div
        id="hint"
      >
        <div
          class="hint-line"
          id="hint-hovered-line"
        >
          <br />
        </div>
      </div>
    </div>
  </div>
</div>
`;
